# learnGraphics

./: .gitmodules  CMakeLists.txt  build.sh  configure.sh  run.sh
SRC/: bufferFuckery.cpp  callbacks.h  coloredCorners.cpp  error_callbacks.h  ex_shader.cpp  helloTriangle.cpp  main.cpp  main2.cpp  shader.h  textures.cpp  triangles.cpp  twoTriangles.cpp  uniformRedTriangle.cpp  utilities.h  vertex.h
SRC/shaders/: inputPos.glsl  offset.glsl  outputPos.glsl  rainbowTriangle_fragment.glsl  upsideDown.glsl
